<resources>
    <string name="quotelockx">QuoteLockX</string>
    <string name="easter_egg" translatable="false">▲ + ▼ = ◆</string>
    <string name="ok">OK</string>
    <string name="confirm">Confirm</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="enable">Enable</string>
    <string name="download">Download</string>
    <string name="install">Install</string>
    <string name="reboot">Reboot</string>
    <string name="ignore">Ignore</string>
    <string name="save">Save</string>
    <string name="disable">disable</string>
    <string name="cancel">Cancel</string>
    <string name="settings">Settings</string>
    <string name="lockscreen_styles">Lockscreen Styles</string>
    <string name="style">Style</string>
    <string name="preview">Preview</string>
    <string name="about">About</string>
    <string name="new_version_bubble" translatable="false">New</string>
    <string name="close">Close</string>
    <string name="search">Search</string>
    <string name="data_retention">Data Retention</string>
    <string name="connect_account">Connect Google Account</string>
    <string name="disconnect_account">Disconnect</string>
    <string name="import_export">Import/Export</string>
    <string name="sync">Sync</string>
    <string name="export_database">Export Database</string>
    <string name="import_database">Import Database</string>
    <string name="export_csv">Export CSV</string>
    <string name="import_csv">Import CSV</string>
    <string name="backup">Backup</string>
    <string name="restore">Restore</string>
    <string name="clear">Clear</string>
    <string name="enable_xposed_module_title">Enable Xposed module</string>
    <string name="enable_xposed_module_message">
        Android does not normally allow apps to add text to the lockscreen.\n\nFor QuoteLockX to function correctly, you must enable the included Xposed module.
    </string>
    <string name="module_outdated_title">Xposed module updated</string>
    <string name="module_outdated_message">Please reboot your device or restart System UI for changes to take effect.</string>
    <string name="xposed_not_installed">Xposed not installed</string>
    <string name="report_bug">Report bug</string>
    <string name="battery_optimization_title">Battery optimization enabled</string>
    <string name="battery_optimization_message">This may cause the background task to fail to run automatically on some devices, disable it?</string>
    <string name="pref_language_title">Language</string>
    <string name="pref_language_system">Follow System</string>
    <string name="pref_dark_mode_title">Dark Mode</string>
    <string name="pref_dark_mode_system">Follow System</string>
    <string name="pref_refresh_interval_title">Refresh interval</string>
    <string name="pref_refresh_interval_summary">How often to refresh the quote</string>
    <string name="pref_refresh_interval_summary_alt">Cannot set refresh rate for selected provider</string>
    <string name="pref_unmetered_only_title">Unmetered only</string>
    <string name="pref_unmetered_only_summary">Don\'t update on metered connections</string>
    <string name="pref_unmetered_only_summary_alt">Selected provider does not require internet</string>
    <string name="pref_font_size_text_title">Quote font size</string>
    <string name="pref_font_size_text_summary">Size of the quote text</string>
    <string name="pref_font_size_source_title">Source font size</string>
    <string name="pref_font_size_source_summary">Size of the source text</string>
    <string name="pref_font_style_text_title">Quote font style</string>
    <string name="pref_font_style_text_summary">Font style of the quote text</string>
    <string name="pref_font_style_source_title">Source font style</string>
    <string name="pref_font_style_source_summary">Font style of the source text</string>
    <string name="pref_font_family_title">Font family</string>
    <string name="pref_font_family_summary">Font family of the quote and source text</string>
    <string name="pref_font_style_bold">Bold</string>
    <string name="pref_font_style_italic">Italic</string>
    <string name="pref_variable_font_style_weight">Variable Weight</string>
    <string name="pref_variable_font_style_slant">Variable Slant</string>
    <string name="pref_font_family_custom">Custom</string>
    <string name="pref_layout_padding_top_title">Padding top</string>
    <string name="pref_layout_quote_spacing_summary">Spacing between quote text and source</string>
    <string name="pref_layout_quote_spacing_title">Quote spacing</string>
    <string name="pref_layout_padding_top_summary">Padding top of the layout</string>
    <string name="pref_layout_padding_bottom_title">Padding bottom</string>
    <string name="pref_layout_padding_bottom_summary">Padding bottom of the layout</string>
    <string name="pref_refresh_info_title">Refresh info</string>
    <string name="pref_refresh_info_summary">Last update: %s</string>
    <string name="pref_quote_module_title">Quote provider</string>
    <string name="pref_display_on_aod_title">[ALPHA]Display on AOD</string>
    <string name="pref_display_on_aod_summary">NOTE: Only tested on OP7Pro OOS11 OB4!</string>
    <string name="pref_quote_module_summary_alt">Select a quote source</string>
    <string name="pref_module_preferences_title">Quote provider preferences</string>
    <string name="pref_module_preferences_summary">Manage provider-specific settings</string>
    <string name="pref_module_preferences_summary_alt">No preferences for selected provider</string>
    <string name="pref_collection_title">Collections</string>
    <string name="pref_history_title">Histories</string>
    <string name="pref_quote_title">Quote</string>
    <string name="pref_detail_title">Detail</string>
    <string name="pref_restart_system_ui_title">Restart System UI</string>
    <string name="pref_debug_restart_system_ui_summary">[ROOT] Re-hook lockscreen</string>
    <string name="pref_pin_widget_title">App widget</string>
    <string name="pref_pin_widget_summary">Pin a widget onto home screen</string>
    <string name="pref_pin_widget_summary_alt">The default launcher does not support pinning app widgets</string>
    <string name="pref_clear_cache">Clear Cache</string>
    <string name="refresh_quote">Refresh</string>
    <string name="quote_download_failed">Failed to download quote</string>
    <string name="quote_download_success">Quote downloaded successfully</string>
    <string name="open_quotelock_app_line1">Welcome to QuoteLockX!</string>
    <string name="open_quotelock_app_line2">Please open the configuration app</string>
    <string name="selected_module_not_found">Selected module could not be found</string>
    <string name="pref_about_version">Version</string>
    <string name="about_developers">Developers</string>
    <string name="about_maintainer">Maintainer</string>
    <string name="about_original_developer">Original Developer</string>
    <string name="about_translators">Translators</string>
    <string name="about_traditional_chinese" translatable="false">繁體中文</string>
    <string name="about_quote_providers">Quote providers</string>
    <string name="pref_about_github" translatable="false">GitHub</string>
    <string name="pref_about_libraries">Libraries</string>
    <string name="about_new_version">New Version Available</string>
    <string name="about_downloading">Downloading…</string>
    <string name="about_download_paused">Download paused</string>
    <string name="about_download_error">Download error, please retry</string>
    <string name="about_install_new_version">Install New Version</string>
    <string name="module_hitokoto_name">Hitokoto 一言 (中文)</string>
    <string name="module_wikiquote_name">Wikiquote QotD (multilingual)</string>
    <string name="module_jinrishici_name">Jinrishici 今日诗词 (中文)</string>
    <string name="module_freakuotes_name" translatable="false">Freakuotes (Español)</string>
    <string name="module_natune_name" translatable="false">Natune.net (Deutsch)</string>
    <string name="module_brainy_name" translatable="false">BrainyQuote (English)</string>
    <string name="module_fortune_name">Fortune-mod (multilingual)</string>
    <string name="module_libquotes_name" translatable="false">Libquotes QotD (English)</string>
    <string name="module_openai_name">OpenAI (multilingual)</string>
    <string name="module_custom_name">Custom</string>
    <string name="module_collections_name">Collections</string>
    <string name="module_custom_setup_line1">No custom quotes set</string>
    <string name="module_custom_setup_line2">Please open the provider settings</string>
    <string name="module_custom_activity_label">Custom quotes</string>
    <string name="module_custom_enter_quote">Enter quote</string>
    <string name="module_custom_create_quote">Create quote</string>
    <string name="module_custom_text">Text</string>
    <string name="module_custom_source">Source</string>
    <string name="module_custom_saved_quote">Saved quote</string>
    <string name="module_custom_deleted_quote">Deleted quote</string>
    <string name="module_brainy_config_label">BrainyQuote setup</string>
    <string name="module_wiki_quote_config_label">Wikiquote setup</string>
    <string name="module_hitokoto_config_label">Hitokoto setup</string>
    <string name="module_fortune_config_label">Fortune-mod setup</string>
    <string name="module_openai_config_label">OpenAI setup</string>
    <string name="module_openai_quote_language">Language</string>
    <string name="module_openai_api_model">API Model</string>
    <string name="module_openai_quote_type">Quote Type</string>
    <string name="module_openai_api_key" translatable="false">API Key</string>
    <string name="module_openai_api_key_hint">Generate API Key</string>
    <string name="module_openai_api_host">API Host</string>
    <string name="module_openai_api_validate">VALIDATE</string>
    <string name="module_openai_token_usage">Token usage: %d</string>
    <string name="module_openai_not_support_region">OpenAI is not supported in your IP\'s region</string>
    <string name="module_openai_api_key_not_set">OpenAI API key not set</string>
    <string name="module_openai_api_key_invalid">Invalid OpenAI API key</string>
    <string name="module_openai_api_request_limit">OpenAI API request limit reached, please check your account or try again later</string>
    <string name="module_openai_api_server_error">OpenAI server error</string>
    <string name="module_openai_api_engine_overloaded">OpenAI server is currently overloaded, please try again later</string>
    <string name="module_openai_api_connect_error">OpenAI API connect error</string>
    <string name="module_openai_expenditure_tooltips">Using OpenAI provider may potentially result in certain expenditures</string>
    <string name="module_openai_incorrect_content_tooltips">GPT sometimes provides quotes with erroneous sources</string>
    <string name="module_openai_setup_line1">@string/module_openai_api_key_not_set</string>
    <string name="module_openai_setup_line2">Please open the OpenAI settings</string>
    <string name="quote_collections_screen_label">Collections</string>
    <string name="module_collections_setup_line1">No collections set</string>
    <string name="module_collections_setup_line2">Please open the collections settings</string>
    <string name="quote_histories_screen_label">Histories</string>
    <string name="quote_histories_cleared_quote">Cleared quote</string>
    <string name="quote_fonts_magisk_module_needed_title">Magisk module needed</string>
    <string name="quote_fonts_magisk_module_needed_message">
        Android does not normally allow apps to share imported fonts to the lockscreen.\n\nTo use the QuoteLockX custom fonts feature, you must download and install the QuoteLockX-CustomFonts module in magisk.
    </string>
</resources>